--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cordova-plugin-http",
-  "version": "2.1.5",
+  "version": "3.0.0",
   "description": "\r\n        Cordova / Phonegap plugin for communicating with HTTP servers using SSL pinning\r\n\t",
   "cordova": {
     "id": "cordova-plugin-http",
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/pluservice/cordova-HTTP.git"
+    "url": "https://github.com/pluservice/cordova-HTTP.git"
   },
   "keywords": [
     "ecosystem:cordova",
